--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       id="preview"
       style="display: none; position: fixed; top: 0; left: 0; height: 100%; object-fit: cover; width: 100%;"
       autoplay
+      playsinline
       muted
     ></video>
     <script>
