--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                   document
                     .getElementById("device-select")
                     .style.removeProperty("display");
+                  document
+                    .getElementById("facing-select")
+                    .style.removeProperty("display");
                 });
 
                 document.getElementById("device-loading").remove();
