--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                       .getUserMedia({
                         video: {
                           deviceId: deviceId,
-                          facingMode: { exact: mode }
+                          facingMode: mode
                         }
                       })
                       .then(function(stream) {
